--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,11 +7,11 @@
             "DOM.Iterable",
             "ESNext"
         ],
-        "allowJs": false,
-        "skipLibCheck": false,
+        "allowJs": true,
+        "skipLibCheck": true,
         "esModuleInterop": false,
         "allowSyntheticDefaultImports": true,
-        "strict": true,
+        "strict": false,
         "forceConsistentCasingInFileNames": true,
         "module": "ESNext",
         "moduleResolution": "Node",
